--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <i>B.S. - Computer Science</i>
         <ul>
             <li>
-                Achieved GPA <strong>3.69</strong>, Major GPA <strong>3.91</strong>, until now (4.3 scale) <i>Magna Cum Laude</i>         
+                Achieved GPA <strong>3.70</strong>, Major GPA <strong>3.96</strong> (4.3 scale) <i>Magna Cum Laude</i>         
             </li>
         </ul>
         
