Change blog url

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             
             &nbsp;&nbsp;&nbsp;&nbsp;
             
-            <a target="_blank" href="https://imnotkind.github.io/blog/"><i class="fas fa-blog fa-lg"></i></a>
+            <a target="_blank" href="https://imnotkind.github.io/imnotblog/"><i class="fas fa-blog fa-lg"></i></a>
             &nbsp;&nbsp;&nbsp;&nbsp;
 
             <a target="_blank" href="https://github.com/imnotkind"><i class="fa fa-github fa-lg"></i></a>
