--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
             </small>
         </h3>
         <i>Advanced Recommendation Technology Dept. (Internship)</i>
+        <ul>
+            <li><h4>Recommendation Technology Researcher & Developer</h4>
+                <ul>
+                    <li>Item-to-Item recommendation for KakaoStory similar post recommendation, 
+                    </li>
+                    <li>&emsp;using content-based(CB) and collaborative filtering(CF) with multi-armed bandit(MAB)
+                    </li>
+                    <li>User-to-Item recommendation for Kakaotalk birthday gift recommendation, 
+                    </li>
+                    <li>&emsp;using LinUCB contextual bandit with click log pLSI features as the context vector
+                    </li>
+                </ul>
+            </li>
+        </ul>
 
         
         <h3>Fitmedi (Fitcare) <small>2019.12 ~ 2020.6
